구독 api 버그 fix